load("//rules:bzlws_copy.bzl", "bzlws_copy")

package(default_visibility = ["//visibility:public"])

bzlws_copy(
    name = "update_docs",
    out = "docs/{FILENAME}",
    tags = ["manual"],
    force = True,
    srcs = [
        "//rules:bzlws_copy_doc",
        "//rules:bzlws_link_doc",
        "//rules:bzlws_extract_doc",
    ],
)
