module(
    name = "bzlws",
    version = "0.3.0",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "yaml-cpp", version = "0.9.0")

bazel_dep(name = "stardoc", version = "0.8.1", dev_dependency = True)
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "fc76d0bd6a57447ca14eebb2e7009666ed915ece",
    remote = "https://github.com/zaucy/bazel-compile-commands-extractor.git",
)
