_msvc_copts = ["/std:c++17"]
_gcc_copts = ["-std=c++17"]

_copts = select({
    "@bazel_tools//src/conditions:windows": _msvc_copts,
    "@bazel_tools//src/conditions:windows_msvc": _msvc_copts,
    "@bazel_tools//src/conditions:windows_msys": _msvc_copts,
    "//conditions:default": _gcc_copts,
})

cc_binary(
    name = "bzlws_link",
    visibility = ["//visibility:public"],
    srcs = ["bzlws_link.cc"],
    copts = _copts,
    deps = [
        "//bzlws_tool_lib",
    ],
)
