load("@bzlws//:index.bzl", "bzlws_copy", "bzlws_link")

bzlws_copy(
    name = "copy_example_txt",
    srcs = ["example.txt"],
    out = "ignored_folder",
)

bzlws_link(
    name = "link_example_txt",
    srcs = ["example.txt"],
    out = "ignored_folder",
)

bzlws_copy(
    name = "copy_error_example_txt",
    srcs = ["example.txt"],
    out = "folder",
)

bzlws_copy(
    name = "link_error_example_txt",
    srcs = ["example.txt"],
    out = "folder",
)

bzlws_copy(
    name = "substitutions_example1",
    srcs = ["example.txt"],
    out = "ignored_folder/__{BASENAME}__{EXT}",
)

bzlws_copy(
    name = "substitutions_example2",
    srcs = ["example.txt"],
    out = "ignored_folder/{EXTNAME}__{FILENAME}",
)
