load("//internal:bzlws_info.bzl", "bzlws_info")
package(default_visibility = ["//visibility:public"])

bzlws_info(name = "bazel-bin")
bzlws_info(name = "bazel-genfiles")
bzlws_info(name = "bazel-testlogs")
bzlws_info(name = "character-encoding")
bzlws_info(name = "command_log")
bzlws_info(name = "committed-heap-size")
bzlws_info(name = "execution_root")
bzlws_info(name = "gc-count")
bzlws_info(name = "gc-time")
bzlws_info(name = "install_base")
bzlws_info(name = "java-home")
bzlws_info(name = "java-runtime")
bzlws_info(name = "java-vm")
bzlws_info(name = "max-heap-size")
bzlws_info(name = "output_base")
bzlws_info(name = "output_path")
bzlws_info(name = "package_path")
bzlws_info(name = "release")
bzlws_info(name = "repository_cache")
bzlws_info(name = "server_log")
bzlws_info(name = "server_pid")
bzlws_info(name = "used-heap-size")
bzlws_info(name = "workspace")
