module(name = "bzlws_test")

bazel_dep(name = "bzlws")
local_path_override(
    module_name = "bzlws",
    path = "..",
)

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "204aa593e002cbd177d30f11f54cff3559110bb9",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

faux_repo_ext = use_extension("//:extensions.bzl", "faux_repo_extension")
use_repo(faux_repo_ext, "faux_repo")
