module(name = "bzlws_test")

bazel_dep(name = "bzlws")
local_path_override(
    module_name = "bzlws",
    path = "..",
)

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "fc76d0bd6a57447ca14eebb2e7009666ed915ece",
    remote = "https://github.com/zaucy/bazel-compile-commands-extractor.git",
)

faux_repo_ext = use_extension("//:extensions.bzl", "faux_repo_extension")
use_repo(faux_repo_ext, "faux_repo")
