load("@rules_cc//cc:defs.bzl", "cc_binary")

_msvc_copts = ["/std:c++17"]
_gcc_copts = ["-std=c++17"]

_copts = select({
    "@bazel_tools//src/conditions:windows": _msvc_copts,
    "@bazel_tools//src/conditions:windows_msvc": _msvc_copts,
    "@bazel_tools//src/conditions:windows_msys": _msvc_copts,
    "//conditions:default": _gcc_copts,
})

cc_binary(
    name = "cpp",
    visibility = ["//visibility:public"],
    srcs = ["cpp_generator.cc"],
    copts = _copts,
)
