load("@rules_cc//cc:defs.bzl", "cc_library")
load("//tools:copts.bzl", "copts")

cc_library(
    name = "bzlws_extract",
    srcs = ["bzlws_extract.cc"],
    hdrs = ["bzlws_extract.hh"],
    copts = copts,
    visibility = ["//visibility:public"],
    deps = [
        "//tools/bzlws_tool_lib",
    ],
)
